--- a/css/curso.css
+++ b/css/curso.css
@@ -1,5 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+
+
 body {
-    background-color: #DBE4EE;
+    background-color: #ffffff;     
+}
+
+.text-center {
+    padding-top: 45px;
+}
+
+h1 {
+    color: #003a7a;
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 40px;
+}
+
+.small {
+    color: #003a7a;
+    font-size: 40px;
+    font-family: 'Fjalla One', sans-serif;
+    padding-top: 20px;
+    text-align: center;
+}
+
+.space {
+    padding-top: 10px;;
+}
+
+.obj-list {
+    color: white;
+    padding-top: 10px;
+    font-size: 16px;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: bold;
 }
 
 #slider {
@@ -25,7 +59,7 @@ body {
     padding: 0;
     width: 700px;
     height: 500px;
-    background: #ccc;
+    background: rgb(240, 240, 240);
     text-align: center;
     line-height: 50px;
 }
@@ -35,7 +69,7 @@ a.control_prev, a.control_next {
     top: 40%;
     z-index: 999;
     display: block;
-    padding: 4% 3%;
+    padding: 2% 3%;
     width: auto;
     height: auto;
     background: #585757;
