--- a/css/curso.css
+++ b/css/curso.css
@@ -49,6 +49,15 @@ h1 {
     padding-top: 30px;
 }
 
+.table {   
+    color: rgb(15, 15, 15);
+    padding-top: 10px;
+    text-align: center;
+    font-size: 16px;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: bold;    
+}
+
 #slider {
     position: relative;
     overflow: hidden;
